app/definitions/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: randomapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: randomapp
  template:
    metadata:
      labels:
        app: randomapp
    spec:
      containers:
      - name: randomapp
        image: lolivag/randomapp:v1
        ports:
        - containerPort: 5000
