app/definitions/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: randomapp
spec:
  selector:
    app: randomapp
  ports:
    - protocol: TCP
      port: 5050
      targetPort: 5050
  type: ClusterIP
