app/definitions/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: randomapp
spec:
  ingressClassName: nginx
  rules:
    - host: random.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: randomapp
                port:
                  number: 5050
